--- a/telegraphist/message-templates/travis-ci.tmpl
+++ b/telegraphist/message-templates/travis-ci.tmpl
@@ -1,1 +1,1 @@
-Travis CI: <a href="{{ build_url }}">#{{ build_number }}</a> for <a href="https://github.com/{{ repo_slug }}">{{ repo_slug }}</a> has {{ build_state }}
+Travis CI: <a href="{{ build_url }}">#{{ build_number }}</a> for <a href="https://github.com/{{ repo_slug }}">{{ repo_slug }}</a> {{ build_state }}
